--- a/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
+++ b/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
@@ -87,24 +87,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IvDacBi0CT08"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_JTKo4HR0Ktm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Grade Checker:\n",
@@ -170,24 +152,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "MDhj-d30CUeL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_WS-u0ek9Ocr"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Online Store Shipping Fee:\n",
@@ -238,24 +202,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6NtAPF1DCVuV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "60ZfYFDx0KGE"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -346,24 +292,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "-GiSGTv_CW8V"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "EVt2iHM2vBr9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Correcting the database:\n",
@@ -393,13 +321,42 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Notes:-"
+      ],
       "metadata": {
-        "id": "IyTJDRxjySvM"
+        "id": "kRBoqGE2EXVB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "post = input(\"Enter your social media post:  \")\n",
+        "find_word = post.find(\"motivation\")\n",
+        "if find_word != -1 :\n",
+        "  print(\"The word #motivation is use in post\")\n",
+        "else:\n",
+        "  print(\"The word #motivation is not use in post\")"
+      ],
+      "metadata": {
+        "id": "IyTJDRxjySvM",
+        "outputId": "33beb105-e443-4670-b72f-18bd4fcd6e46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your social media post:  motivation speaker\n",
+            "The word #motivation is use in post\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
