--- a/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
+++ b/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
@@ -252,12 +252,6 @@
         "# find word #motivation.\n",
         "find_word = \"#motivation\" in media_post\n",
         "\n",
-        "# find_word = media_post.find(\"motivation\")\n",
-        "# if find_word != -1 :\n",
-        "#   print(\"The word #motivation is use in post\")\n",
-        "# else:\n",
-        "#   print(\"The word #motivation is not use in post\")\n",
-        "\n",
         "# print the unique words\n",
         "unique_words = list(set(media_post.split()))\n",
         "# note:- Set items are unordered, unchangeable, and no duplicate values.\n",
@@ -312,18 +306,35 @@
         "cities = [\"Lahore\", \"Karachi\", \"Islamabad\", \"Multan\"]\n",
         "AQI = [166, 178, 102, 135]\n",
         "\n",
-        "\n"
+        "AQI_dict = dict(zip(cities, AQI))\n",
+        "print(AQI_dict)\n",
+        "\n",
+        "AQI_dict[\"Islamabad\"] = 102.5\n",
+        "print(AQI_dict)\n"
       ],
       "metadata": {
-        "id": "Md9dYFrsxQkA"
+        "id": "Md9dYFrsxQkA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3dfc6e91-2a5d-4e58-f9af-f4ea12395f80"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Lahore': 166, 'Karachi': 178, 'Islamabad': 102, 'Multan': 135}\n",
+            "{'Lahore': 166, 'Karachi': 178, 'Islamabad': 102.5, 'Multan': 135}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Notes:-"
+        "### **Notes**:-"
       ],
       "metadata": {
         "id": "kRBoqGE2EXVB"
@@ -341,10 +352,10 @@
       ],
       "metadata": {
         "id": "IyTJDRxjySvM",
-        "outputId": "33beb105-e443-4670-b72f-18bd4fcd6e46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "33beb105-e443-4670-b72f-18bd4fcd6e46"
       },
       "execution_count": 2,
       "outputs": [
