--- a/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
+++ b/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
@@ -306,26 +306,32 @@
         "cities = [\"Lahore\", \"Karachi\", \"Islamabad\", \"Multan\"]\n",
         "AQI = [166, 178, 102, 135]\n",
         "\n",
-        "AQI_dict = dict(zip(cities, AQI))\n",
-        "print(AQI_dict)\n",
+        "if len(cities) == len(AQI):\n",
+        "  AQI_dict = dict(zip(cities,AQI))\n",
+        "  print(AQI_dict)\n",
+        "else:\n",
+        "  print(\"Check whether the number of keys and values is the same.\")\n",
         "\n",
-        "AQI_dict[\"Islamabad\"] = 102.5\n",
-        "print(AQI_dict)\n"
+        "print(\"\\nUpdate value\")\n",
+        "AQI_dict['Islamabad']= 102.5\n",
+        "print(AQI_dict)"
       ],
       "metadata": {
-        "id": "Md9dYFrsxQkA",
+        "id": "In_4Jlbsr9Uk",
+        "outputId": "e97a5eb1-416a-4d5c-a7ba-18e98ad5b325",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3dfc6e91-2a5d-4e58-f9af-f4ea12395f80"
+        }
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "{'Lahore': 166, 'Karachi': 178, 'Islamabad': 102, 'Multan': 135}\n",
+            "\n",
+            "Update value\n",
             "{'Lahore': 166, 'Karachi': 178, 'Islamabad': 102.5, 'Multan': 135}\n"
           ]
         }
@@ -357,7 +363,7 @@
         },
         "outputId": "33beb105-e443-4670-b72f-18bd4fcd6e46"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
