--- a/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
+++ b/Python/Assignments/AZURE_DA5_Python_Assignment_1.ipynb
@@ -206,6 +206,49 @@
     {
       "cell_type": "markdown",
       "source": [
+        "A minor improvement would be fixing the typo in exchagne_rate and refining the shipping fee output message. Overall, a strong and well-structured submission."
+      ],
+      "metadata": {
+        "id": "3nnlr3-Ks_df"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_order = float(input(\"Enter the total order amount: \"))\n",
+        "\n",
+        "if total_order < 50:\n",
+        "    shipping_fee = 10\n",
+        "    print(f\"Shipping Fee: ${shipping_fee}\")\n",
+        "elif 50 <= total_order <= 100:\n",
+        "    shipping_fee = 5\n",
+        "    print(f\"Shipping Fee: ${shipping_fee}\")\n",
+        "else:\n",
+        "    shipping_fee = 0\n",
+        "    print(\"Shipping is Free\")\n"
+      ],
+      "metadata": {
+        "id": "JIGDEQEwtIUb",
+        "outputId": "b700c713-7467-4283-90b5-645658da9ab9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the total order amount: 23\n",
+            "Shipping Fee: $10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Social Media Post Analysis:\n",
         "Write a program where the user inputs a social media post. The program should:\n",
         "\n",
@@ -323,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
